--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,4 @@
 includes:
-    - vendor/larastan/larastan/extension.neon
-    - vendor/nesbot/carbon/extension.neon
     - phar://phpstan.phar/conf/bleedingEdge.neon
 
 parameters:
@@ -12,8 +10,12 @@ parameters:
         - database
         - public
         - routes
+    scanDirectories:
+        - helpers
 
 
     level: max
 
     tmpDir: /tmp/phpstan
+
+    treatPhpDocTypesAsCertain: false
