--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "devDependencies": {
         "@eslint/js": "^9.37.0",
         "@laravel/vite-plugin-wayfinder": "^0.1.7",
-        "@types/node": "^22.18.10",
+        "@types/node": "^22.18.11",
         "eslint": "^9.37.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
-        "playwright": "^1.56.0",
+        "playwright": "^1.56.1",
         "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.3.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
@@ -43,14 +43,15 @@
         "@tailwindcss/vite": "^4.1.14",
         "@types/react": "^19.2.2",
         "@types/react-dom": "^19.2.2",
-        "@vitejs/plugin-react": "^4.7.0",
+        "@vitejs/plugin-react": "^5.0.4",
+        "babel-plugin-react-compiler": "^1.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.2.1",
-        "globals": "^15.15.0",
+        "globals": "^16.4.0",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0.1",
-        "lucide-react": "^0.475.0",
+        "lucide-react": "^0.546.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "tailwind-merge": "^3.3.1",
