--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "barryvdh/laravel-ide-helper": "^3.6",
         "driftingly/rector-laravel": "^2.1",
         "fakerphp/faker": "^1.23",
+        "laradumps/laradumps": "^4.5",
+        "laradumps/laradumps-core": "^3.2",
         "larastan/larastan": "^3.7",
         "laravel/boost": "^1.4",
         "laravel/pail": "^1.2.2",
